2011-02-03  John W. Eaton  <jwe@octave.org>

	* octave.cc: Include <sys/types.h> and <unistd.h> for isatty.
	Bug #32336.

2011-02-03  Konstantinos Poulios  <logari81@googlemail.com>

	* gl-render.h: (opengl_renderer::draw_axes_titles): Remove prototype.
	* gl-render.cc: (opengl_renderer::draw_axes_titles): Remove function.
	(opengl_renderer::draw_axes_x_grid,
	opengl_renderer::draw_axes_y_grid,
	opengl_renderer::draw_axes_z_grid): Remove calculation of axis label
	positions.
	* graphics.cc: (axes::properties::update_xlabel_position,
	axes::properties::update_ylabel_position
	axes::properties::update_zlabel_position
	axes::properties::update_title_position): New functions calculating
	label and title positions.
	(axes::properties::get_ticklabel_extents): New function.
	* graphics.h.in: Provide functions prototypes.
	* txt-eng-ft.cc (ft_render::get_extent): New function version.
	* txt-eng-ft.h (ft_render::get_extent): Provide function prototype.

2011-02-03  Kai Habel  <kai.habel@gmx.de>

	* src/gl-render.cc(text_to_pixels): Use text_renderer object only
	when freetype is available

2011-02-03  John W. Eaton  <jwe@octave.org>

	* ov-base.cc (octave_base_value::as_mxArray): Return 0 silently.
	* mex.cc (mxArray_octave_value::dup): If value can't be
	converted to mxArray object, then simply create a clone of the
	mxArray_octave_value container.

2010-02-02  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/eigs.cc, DLD-FUNCTIONS/qr.cc: Use testif to only run
	some sparse tests when necessary libraries are installed.

2011-02-03  Konstantinos Poulios  <logari81@googlemail.com>

	* graphics.cc (axes::properties::update_axes_layout):
	New function calculating axes layout.
	(axes::properties::update_ticklengths): New function calculating
	tick lengths and offsets.
	* graphics.h.in (class axes::properties):: New private data
	describing axes layout and corresponding "get" methods. Provide
	declaration and call dependencies for "update_axes_layout".